--- a/index-03.html
+++ b/index-03.html
@@ -1107,7 +1107,7 @@
                                  <a href="#">Services</a>
                               </li>
                               <li class="menu-item">
-                                 <a href="faq.html">Faq</a>
+                                 <a href="FAQ.html">FAQ</a>
                               </li>
                               <li class="menu-item">
                                  <a href="#">Careers</a>
