--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
       <!-- Primary Meta Tags -->
-      <title>Legales | Firma de abogados en Medellín Colombia</title>
+      <title>Legales | Firma de aabogados en Medellín Colombia</title>
       <meta name="robots" content="noindex, follow">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="title" content="Legales | Firma de abogados en Medellín Colombia" />
+      <meta name="title" content="Legales | Firma de aabogados en Medellín Colombia" />
       <meta name="description" content="Nos encargamos de resolver conflictos y hacer cumplir normativas Civiles, Penales, Inmobiliarias, expertos en alcoholemia..." />
 
       <!-- Open Graph / Facebook -->
       <meta property="og:type" content="website" />
       <meta property="og:url" content="legales.com.co" />
-      <meta property="og:title" content="Legales | Firma de abogados en Medellín Colombia" />
+      <meta property="og:title" content="Legales | Firma de aabogados en Medellín Colombia" />
       <meta property="og:description" content="Nos encargamos de resolver conflictos y hacer cumplir normativas Civiles, Penales, Inmobiliarias, expertos en alcoholemia..." />
       <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
 
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image" />
       <meta property="twitter:url" content="legales.com.co" />
-      <meta property="twitter:title" content="Legales | Firma de abogados en Medellín Colombia" />
+      <meta property="twitter:title" content="Legales | Firma de aabogados en Medellín Colombia" />
       <meta property="twitter:description" content="Nos encargamos de resolver conflictos y hacer cumplir normativas Civiles, Penales, Inmobiliarias, expertos en alcoholemia..." />
       <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 
@@ -99,9 +99,9 @@
                                              <a href="#">Nosotros</a>
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
-                                                <li><a href="nosotros.html#equipo">Abogados</a></li>
+                                                <li><a href="nosotros.html#equipo">Aabogados</a></li>
                                                 <li><a href="servicios.html">Servicios</a></li>
-                                                <li><a href="faq.html">Faq</a></li>
+                                                <li><a href="faq.html">FAQ</a></li>
                                              </ul>
                                           <li class="dropdown">
                                              <a href="">Especialidades</a>
@@ -115,7 +115,7 @@
 
                                           
                                           <li class="">
-                                             <a href="faq.html">Faq</a></li>
+                                             <a href="FAQ.html">FAQ</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
@@ -207,7 +207,7 @@
                               data-frame_1="st:2000;sp:1000;"
                               data-frame_999="o:0;st:w;sR:6000;"
                               style="z-index:9;font-family:'Montserrat';">
-                              LEGALES, FIRMA DE ABOGADOS / MEDELLÍN
+                              LEGALES, FIRMA DE Aabogados / MEDELLÍN
                               </rs-layer>
                               <a
                               id="slider-1-slide-2-layer-8" 
@@ -257,7 +257,7 @@
                               </div>
                            </div>
                            <div class="pbmit-ihbox-headingicon">
-                              <h4 class="pbmit-element-heading"> Abogados Online</h4>
+                              <h4 class="pbmit-element-heading"> Aabogados Online</h4>
                               <h2 class="pbmit-element-title">Consultar</h2>
                            </div>
                         </div>
@@ -352,7 +352,7 @@
                            <div class="pbmit-animation-style2">
                               <img src="images/pbmit-single01.jpg" class="img-fluid" alt="">
                            </div>
-                           <div class="about-heading">Bienvenido/@ a nuestro bufete de abogados especializados en derecho penal, civil, alcoholemia e inmobiliario.
+                           <div class="about-heading">Bienvenido/@ a nuestro bufete de aabogados especializados en derecho penal, civil, alcoholemia e inmobiliario.
                            <br>La disciplina, responsabilidad y compromiso en cada servicio jurídico prestado, así como el engranaje de nuestros procesos legales y su mejora continua, son la mayor garantía de satisfacción de nuestros clientes en los procesos liderados. Sin duda, el capacitado y talentoso capital humano de LEGALES, son el motor de nuestro éxito; liderado por la alta dirección, plenamente comprometida en el cumplimiento de los requisitos legales. </div>
                         </div> 
                      </div>
@@ -366,7 +366,7 @@
                      <div class="col-md-6">
                         <div class="pbmit-sticky">
                            <div class="pbmit-heading text-left animation-style2">
-                              <h2 class="pbmit-title">SERVICIOS <br>Somos expertos en alcholomia, derecho civil y penal.</h2>
+                              <h2 class="pbmit-title">SERVICIOS <br>Somos expertos en alcoholemia, derecho civil y penal.</h2>
                            </div>
                            <p>En nuestro equipo contamos con expertos en cada una de estas áreas, lo que nos permite ofrecer un servicio de asesoría y defensa integral a nuestros clientes.</p>
                            <a href="#" class="pbmit-btn pbmit-btn-inline">
@@ -413,7 +413,7 @@
                                  <div class="pbmit-service-content">
                                     <div class="at-above-post-homepage addthis_tool"></div>
                                     <p>
-                                       Nuestra firma Abogados Civilistas con experiencia, se esmera en brindar el mejor servicio de asesoría, consultoría, apoyo y acompañamiento con Abogados en Derecho Civil en Medellín y Antioquia. Extendiendose al acompañamiento judicial y extrajudicial.
+                                       Nuestra firma Aabogados Civilistas con experiencia, se esmera en brindar el mejor servicio de asesoría, consultoría, apoyo y acompañamiento con Aabogados en Derecho Civil en Medellín y Antioquia. Extendiendose al acompañamiento judicial y extrajudicial.
                                     </p>
                                     <div class="at-below-post-homepage addthis_tool"></div>
                                     <p>
@@ -560,7 +560,7 @@
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
-                                                   LEGALES se destaca por su excelencia en defensas penales de grandes envergaduras a nivel nacional. Nuestro equipo de abogados es reconocido por su seriedad, compromiso, vocación y formación académica. La ética, responsabilidad y solvencia profesional son los pilares en los que nuestros clientes confían al solicitar nuestros servicios en el complejo ámbito del proceso penal, ya sea como defensores o representantes de víctimas. Nuestra amplia experiencia en asuntos jurídico-penales nos sitúa a la vanguardia de las consultorías y servicios legales especializados en esta rama del Derecho.
+                                                   LEGALES se destaca por su excelencia en defensas penales de grandes envergaduras a nivel nacional. Nuestro equipo de aabogados es reconocido por su seriedad, compromiso, vocación y formación académica. La ética, responsabilidad y solvencia profesional son los pilares en los que nuestros clientes confían al solicitar nuestros servicios en el complejo ámbito del proceso penal, ya sea como defensores o representantes de víctimas. Nuestra amplia experiencia en asuntos jurídico-penales nos sitúa a la vanguardia de las consultorías y servicios legales especializados en esta rama del Derecho.
                                                 </p>
                                                 <div class="at-below-post-homepage addthis_tool"></div>
                                              </div>
@@ -628,7 +628,7 @@
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
-                                                  En primer término, nuestra firma Abogados Civilistas con experiencia, se esmera en brindar el mejor servicio de asesoría, consultoría y acompañamiento con Abogados en Derecho Civil en Medellín y Antioquia. Por tal circunstancia, contamos con, Juristas con Destreza en solución de Asuntos de índole Procesal, los cuales, le representamos en el área de Del valle de Aburrá. Medellín, Sabaneta, Envigado, Itagüí y demás municipios de Antioquia.
+                                                  En primer término, nuestra firma Aabogados Civilistas con experiencia, se esmera en brindar el mejor servicio de asesoría, consultoría y acompañamiento con Aabogados en Derecho Civil en Medellín y Antioquia. Por tal circunstancia, contamos con, Juristas con Destreza en solución de Asuntos de índole Procesal, los cuales, le representamos en el área de Del valle de Aburrá. Medellín, Sabaneta, Envigado, Itagüí y demás municipios de Antioquia.
                                                 </p>
                                                 <div class="at-below-post-homepage addthis_tool"></div>
                                              </div>
@@ -918,7 +918,7 @@
                                        <div class="pbminfotech-box-desc">
                                           <blockquote class="pbminfotech-testimonial-text">
                                              <div class="at-above-post-homepage addthis_tool"></div>
-                                             <p>“¡Gracias a Legales firma de abogados hoy puedo dormir tranquila, muchísimas gracias muy recomendados!”</p>
+                                             <p>“¡Gracias a Legales firma de aabogados hoy puedo dormir tranquila, muchísimas gracias muy recomendados!”</p>
                                              <div class="at-below-post-homepage addthis_tool"></div>
                                           </blockquote>
                                        </div>
@@ -956,7 +956,7 @@
                                        <div class="pbminfotech-box-desc">
                                           <blockquote class="pbminfotech-testimonial-text">
                                              <div class="at-above-post-homepage addthis_tool"></div>
-                                             <p>“Estoy feliz de haber podido contar con los servicios profesionales de Legales firma de abogados en mi proceso de alcoholemia, tengo mi licencia nuevamente.”</p>
+                                             <p>“Estoy feliz de haber podido contar con los servicios profesionales de Legales firma de aabogados en mi proceso de alcoholemia, tengo mi licencia nuevamente.”</p>
                                              <div class="at-below-post-homepage addthis_tool"></div>
                                           </blockquote>
                                        </div>
@@ -1259,7 +1259,7 @@
                                     <a href="servicios.html">Servicios</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="faq.html">Faq</a>
+                                    <a href="FAQ.html">FAQ</a>
                                  </li>
                               </ul>
                            </div>
