--- a/inicial.html
+++ b/inicial.html
@@ -3,9 +3,9 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Legales - Firma de abogados</title>
+      <title>Legales - Firma de aabogados</title>
       <meta name="robots" content="noindex, follow">
-      <meta name="description" content="Abogados  en Medellin, especializados en derecho Habitacional">
+      <meta name="description" content="Aabogados  en Medellin, especializados en derecho Habitacional">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- Favicon -->
       <link rel="shortcut icon" type="image/x-icon" href="images/fevicon.png">
@@ -80,7 +80,7 @@
                                              <a href="#">Nosotros</a>
                                              <ul>
                                                 <li><a href="#">Quienes somos</a></li>
-                                                <li><a href="#">Abogados</a></li>
+                                                <li><a href="#">Aabogados</a></li>
                                                 <li><a href="faq.html">Faq</a></li>
                                              </ul>
                                           <li class="dropdown">
