--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Legales | Firma de bogados en Medellín</title>
+      <title>Legales | Firma de abogados en Medellín</title>
       <meta name="robots" content="noindex, follow" />
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -77,8 +77,8 @@
                                              <a href="#">Nosotros</a>
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
-                                                <li><a href="nosotros.html#equipo">Abogados</a></li>
-                                                <li><a href="faq.html">Faq</a></li>
+                                                <li><a href="nosotros.html#equipo">Aabogados</a></li>
+                                                <li><a href="faq.html">FAQ</a></li>
                                              </ul>
                                           <li class="dropdown">
                                              <a href="">Especialidades</a>
@@ -92,7 +92,7 @@
 
                                           
                                           <li class="">
-                                             <a href="faq.html">Faq</a></li>
+                                             <a href="FAQ.html">FAQ</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
@@ -128,7 +128,7 @@
                   <div class="pbmit-title-bar-content-inner">
                      <div class="pbmit-tbar">
                         <div class="pbmit-tbar-inner container">
-                           <h1 class="pbmit-tbar-title">Firma de abogados</h1>
+                           <h1 class="pbmit-tbar-title">Firma de aabogados</h1>
                         </div>
                      </div>
                      <div class="pbmit-breadcrumb">
@@ -155,7 +155,7 @@
                         <div class="about-dark2-left-section">
                            <div class="pbmit-heading bg-color-dark animation-style2">
                               <h2 class="pbmit-title">Quienes somos?</h2>
-                              <div class="pbmit-heading-desc">Somos Legales, una firma de abogados en Medellín. Nuestro equipo altamente capacitado lo acompañará en cada etapa de su proceso legal y se encargará de resolver cualquier problema que surja en el camino. Contamos con un grupo de abogados dispuestos y preparados para brindarle el mejor apoyo en su caso.</div>
+                              <div class="pbmit-heading-desc">Somos Legales, una firma de aabogados en Medellín. Nuestro equipo altamente capacitado lo acompañará en cada etapa de su proceso legal y se encargará de resolver cualquier problema que surja en el camino. Contamos con un grupo de aabogados dispuestos y preparados para brindarle el mejor apoyo en su caso.</div>
                               <div class="pbmit-heading-desc">Hemos forjado la experiencia y la reputación necesarias para estar siempre a la altura. Cada caso que asumimos es un desafío que encaramos con determinación para alcanzar la victoria. Nuestro compromiso es velar por los intereses de nuestros clientes y mantener el prestigio de nuestra firma. Ser representado por Legales garantiza el éxito rotundo.</div>
 
                            </div>
@@ -322,7 +322,7 @@
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
-                                                   Hemos resuelto los procesos de Alcholemia-Penal mas complejos de la ciudad de Medellin. <br> Nuestros abogados tienen más de 10 años de experiencia legal colectiva.
+                                                   Hemos resuelto los procesos de Alcholemia-Penal mas complejos de la ciudad de Medellin. <br> Nuestros aabogados tienen más de 10 años de experiencia legal colectiva.
                                                 </p>
                                                 <div class="at-below-post-homepage addthis_tool"></div>
                                              </div>
@@ -356,7 +356,7 @@
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
-                                                   Somos ex abogados de la defensoria publica, tenemos la misma e inclus mejor talla que cualquier fiscal. Nuestro equipo legal se ocupará de su caso de la A hasta la Z.
+                                                   Somos ex aabogados de la defensoria publica, tenemos la misma e inclus mejor talla que cualquier fiscal. Nuestro equipo legal se ocupará de su caso de la A hasta la Z.
                                                 </p>
                                                 <div class="at-below-post-homepage addthis_tool"></div>
                                              </div>
@@ -735,7 +735,7 @@
                                     <a href="servicios.html">Servicios</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="faq.html">Faq</a>
+                                    <a href="FAQ.html">FAQ</a>
                                  </li>
                               </ul>
                            </div>
