--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Legales | Firma de bogados en Medellín</title>
+    <title> Legales | Firma de abogados en Medellín</title>
     <meta name="robots" content="noindex, follow">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -82,7 +82,7 @@
                                              <a href="#">Nosotros</a>
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
-                                                <li><a href="nosotros.html#equipo">Abogados</a></li>
+                                                <li><a href="nosotros.html#equipo">Aabogados</a></li>
                                                 <li><a href="faq.html">FAQ</a></li>
                                              </ul>
                                           <li class="dropdown">
@@ -97,7 +97,7 @@
 
                                           
                                           <li class="">
-                                             <a href="faq.html">Faq</a></li>
+                                             <a href="FAQ.html">FAQ</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
@@ -368,7 +368,7 @@
                                     <a href="servicios.html">Servicios</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="faq.html">Faq</a>
+                                    <a href="FAQ.html">FAQ</a>
                                  </li>
                               </ul>
                            </div>
