--- a/team-member-details.html
+++ b/team-member-details.html
@@ -384,7 +384,7 @@
                                     <a href="#">Services</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="faq.html">Faq</a>
+                                    <a href="faq.html">FAQ</a>
                                  </li>
                                  <li class="menu-item">
                                     <a href="#">Careers</a>
