--- a/faq.html
+++ b/faq.html
@@ -77,7 +77,7 @@
                                              <a href="#">Nosotros</a>
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
-                                                <li><a href="nosotros.html#equipo">Aabogados</a></li>
+                                                <li><a href="nosotros.html#equipo">Abogados</a></li>
                                                 <li><a href="faq.html">FAQ</a></li>
                                              </ul>
                                           <li class="dropdown">
@@ -171,7 +171,7 @@
                                  <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
                                     <div class="accordion-body">
                                       
-                                Si con Legales firma de aabogados te acompañamos de la  A la para resolver cualquier situación con tu empresa
+                                Si con Legales firma de Abogados te acompañamos de la  A la para resolver cualquier situación con tu empresa
                                     </div>
                                  </div>
                               </div>
@@ -279,15 +279,14 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-6 col-lg-5">
-                     <div class="widget pbmit-footer-widget-col-1">
+                      <div class="widget pbmit-footer-widget-col-1">
                         <h2>Consultenos su caso</h2>
                         <p></p>
-                        <div class="pbmit-footer-newsletter">
-                           <input type="email" name="EMAIL" placeholder="Envienos su numero telefonico" required="">
-                           <button type="submit" value="Sign up">
-                              <i class="pbmit-base-icon-right-arrow-1"></i>
-                           </button>
-                        </div>
+                        <div class="pbmit-hsanp-btn">
+                                    <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                                       <span>Atención personalizada</span>
+                                    </a>
+                                 </div>
                      </div>
                   </div>
                   <div class="col-md-6 col-lg-3">
