--- a/derechocivil.html
+++ b/derechocivil.html
@@ -77,7 +77,7 @@
                                              <a href="#">Nosotros</a>
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
-                                                <li><a href="nosotros.html#equipo">Aabogados</a></li>
+                                                <li><a href="nosotros.html#equipo">Abogados</a></li>
                                                 <li><a href="faq.html">FAQ</a></li>
                                              </ul>
                                           <li class="dropdown">
@@ -179,8 +179,8 @@
                      <div class="col-lg-8 service-right-col order-1">
                         <img src="images/services/service-03.jpg" class="w-100" alt="">
                         <div class="service-details">
-                           <h4 class="pbmit-title mb-3">¿Aabogados litigantes en derecho Civil en Medellín?</h4>
-                           <p>En primer término, nuestra firma Aabogados Civilistas con experiencia, se esmera en brindar el mejor servicio de asesoría, consultoría y acompañamiento con Aabogados en Derecho Civil en Medellín y Antioquia. Por tal circunstancia, contamos con, Juristas con Destreza en solución de Asuntos de índole Procesal, los cuales, le representamos en el área de Del valle de Aburrá. Medellín, Sabaneta, Envigado, Itagüí y demás municipios de Antioquia.
+                           <h4 class="pbmit-title mb-3">¿Abogados litigantes en derecho Civil en Medellín?</h4>
+                           <p>En primer término, nuestra firma Abogados Civilistas con experiencia, se esmera en brindar el mejor servicio de asesoría, consultoría y acompañamiento con Abogados en Derecho Civil en Medellín y Antioquia. Por tal circunstancia, contamos con, Juristas con Destreza en solución de Asuntos de índole Procesal, los cuales, le representamos en el área de Del valle de Aburrá. Medellín, Sabaneta, Envigado, Itagüí y demás municipios de Antioquia.
                            C</p>
                            <p><span class="globalcolor"><u> Ofrecemos servicio como Abogado civil en:</u></span> 
                            </p>
@@ -237,7 +237,7 @@
                      </div>
                      <div class="col-xl-6 col-md-12">
                        <div class="service-right-section">
-                          <p>Aabogados EN DERECHO CIVIL: Se Encarga de solucionar los problemas que surjan de las personas entre sí en sus diferentes aspectos como son: En Suma, todos los relacionados con las personas mismas, el matrimonio, el divorcio, los bienes de las personas, la propiedad, y formas de adquirir la propiedad ocupación, accesión, prescripción. También, La posesión los modos de adquirir y perder la posesión de los bienes. Los derechos de uso, habitación y servidumbre así: Para terminar, lo relativo a, Patria potestad Alimentos. El parentesco, sus obligaciones, La tutela (protección de los menores) y Curaduría (protección de sus bienes de los menores.) Los contratos celebrados por ellas. La muerte de las personas y la sucesión por causa de la muerte. </p>
+                          <p>Abogados EN DERECHO CIVIL: Se Encarga de solucionar los problemas que surjan de las personas entre sí en sus diferentes aspectos como son: En Suma, todos los relacionados con las personas mismas, el matrimonio, el divorcio, los bienes de las personas, la propiedad, y formas de adquirir la propiedad ocupación, accesión, prescripción. También, La posesión los modos de adquirir y perder la posesión de los bienes. Los derechos de uso, habitación y servidumbre así: Para terminar, lo relativo a, Patria potestad Alimentos. El parentesco, sus obligaciones, La tutela (protección de los menores) y Curaduría (protección de sus bienes de los menores.) Los contratos celebrados por ellas. La muerte de las personas y la sucesión por causa de la muerte. </p>
                            
                            <a href="#" class="pbmit-btn pbmit-btn-inline">
                               <span>Solicitar abogado</span>
@@ -259,7 +259,7 @@
 
                      </div>
                   </div>
-                  <p>Por lo tanto, cuando tengas un problema con otra persona y no sepas como solucionarlo. Tienes como una buena opción acudir a aabogados Civiles, los cuales buscarán la solución legal adecuada según tu caso.</p>
+                  <p>Por lo tanto, cuando tengas un problema con otra persona y no sepas como solucionarlo. Tienes como una buena opción acudir a Abogados Civiles, los cuales buscarán la solución legal adecuada según tu caso.</p>
                   <div class="about-section-home4">
                      <div class="row">
                         <div class="col-md-3"></div>
@@ -284,7 +284,7 @@
                   <div class="row">
                      <div class="col-lg-12 service-right-col order-1">
                         <div class="accordion" id="accordionExample">
-                           <h2>Sabes por qué contratar aabogados en derecho civil?</h2>
+                           <h2>Sabes por qué contratar Abogados en derecho civil?</h2>
                            <div class="accordion-item active">
                               <h2 class="accordion-header" id="headingOne">
                                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
@@ -450,15 +450,14 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-6 col-lg-5">
-                     <div class="widget pbmit-footer-widget-col-1">
+                      <div class="widget pbmit-footer-widget-col-1">
                         <h2>Consultenos su caso</h2>
                         <p></p>
-                        <div class="pbmit-footer-newsletter">
-                           <input type="email" name="EMAIL" placeholder="Envienos su numero telefonico" required="">
-                           <button type="submit" value="Sign up">
-                              <i class="pbmit-base-icon-right-arrow-1"></i>
-                           </button>
-                        </div>
+                        <div class="pbmit-hsanp-btn">
+                                    <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                                       <span>Atención personalizada</span>
+                                    </a>
+                                 </div>
                      </div>
                   </div>
                   <div class="col-md-6 col-lg-3">
