--- a/derechopenal.html
+++ b/derechopenal.html
@@ -77,7 +77,7 @@
                                              <a href="#">Nosotros</a>
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
-                                                <li><a href="nosotros.html#equipo">Aabogados</a></li>
+                                                <li><a href="nosotros.html#equipo">Abogados</a></li>
                                                 <li><a href="faq.html">FAQ</a></li>
                                              </ul>
                                           <li class="dropdown">
@@ -188,7 +188,7 @@
                         <img src="images/services/service-03.jpg" class="w-100" alt="">
                         <div class="service-details">
                            <h4 class="pbmit-title mb-3">Derecho penal</h4>
-                           <p>LEGALES se destaca por su excelencia en defensas y asesorías penales a nivel nacional. Nuestro equipo de aabogados es reconocido por su seriedad, compromiso, vocación y formación académica. La ética, responsabilidad y solvencia profesional son los pilares en los que nuestros clientes confían al solicitar nuestros servicios en el complejo ámbito del proceso penal, ya sea como defensores o representantes de víctimas. Nuestra amplia experiencia en asuntos jurídico-penales nos sitúa a la vanguardia de las consultorías y servicios legales especializados en esta rama del Derecho.</p>
+                           <p>LEGALES se destaca por su excelencia en defensas y asesorías penales a nivel nacional. Nuestro equipo de Abogados es reconocido por su seriedad, compromiso, vocación y formación académica. La ética, responsabilidad y solvencia profesional son los pilares en los que nuestros clientes confían al solicitar nuestros servicios en el complejo ámbito del proceso penal, ya sea como defensores o representantes de víctimas. Nuestra amplia experiencia en asuntos jurídico-penales nos sitúa a la vanguardia de las consultorías y servicios legales especializados en esta rama del Derecho.</p>
                            <p><span class="globalcolor"><u> Derecho Penal Corporativo</u></span> <br>En LEGALES, ofrecemos asesoría en derecho penal empresarial, brindando un acompañamiento constante a las empresas en los casos delictuales más frecuentes que afectan su desarrollo. Entendemos que en las operaciones diarias de una empresa existe la posibilidad de que se cometan delitos que perjudiquen los intereses de la compañía y sus accionistas. Por esta razón, estamos comprometidos en brindar orientación legal en asuntos penales a las empresas, ofreciendo los siguientes servicios:
                            </p>
                            
@@ -305,9 +305,9 @@
                                        <div class="pbmit-split-slide-title">
                                           <h4>Asesorías y representación como denunciante o denunciado</h4>
                                        </div>
-                                       <div class="pbmit-split-slide-desc"> Nuestro equipo calificado de aabogados expertos en derecho penal brinda asesoría personalizada para cada caso presentado en el despacho. Atendemos a los clientes de forma específica, ya que ninguna solicitud es igual y las herramientas legales para solucionar el inconveniente siempre son diferentes.
+                                       <div class="pbmit-split-slide-desc"> Nuestro equipo calificado de Abogados expertos en derecho penal brinda asesoría personalizada para cada caso presentado en el despacho. Atendemos a los clientes de forma específica, ya que ninguna solicitud es igual y las herramientas legales para solucionar el inconveniente siempre son diferentes.
 
-                                       Como aabogados especialistas en derecho penal realizamos un análisis detallado de la situación y luego del estudio, decidimos cuál es el plan para defender al cliente, bien sea que se trate del denunciado o denunciante. Nuestra meta es solucionar el problema legal y mediar entre las partes para que los resultados sean los esperados. Como profesionales comprometidos, nos concentramos en defender los derechos del cliente, indistintamente de su condición ante la ley.
+                                       Como Abogados especialistas en derecho penal realizamos un análisis detallado de la situación y luego del estudio, decidimos cuál es el plan para defender al cliente, bien sea que se trate del denunciado o denunciante. Nuestra meta es solucionar el problema legal y mediar entre las partes para que los resultados sean los esperados. Como profesionales comprometidos, nos concentramos en defender los derechos del cliente, indistintamente de su condición ante la ley.
 
                                      </div>
                                     </div>
@@ -332,7 +332,7 @@
                                        <div class="pbmit-split-slide-title">
                                           <h4>Delitos</h4>
                                        </div>
-                                       <div class="pbmit-split-slide-desc">Entre los diferentes tipos de delitos que atendemos en nuestra oficina de aabogados especializada en derecho penal se encuentran los siguientes
+                                       <div class="pbmit-split-slide-desc">Entre los diferentes tipos de delitos que atendemos en nuestra oficina de Abogados especializada en derecho penal se encuentran los siguientes
                                        <ul>
                                           <li><i class="fa fa-check"></i> Abuso de confianza</li>
                                           <li><i class="fa fa-check"></i> Emisión o transferencia ilegal de cheques</li>
@@ -409,7 +409,7 @@
                                           <h4>Representaciones</h4>
                                        </div>
                                         <div class="pbmit-split-slide-desc">Representación y Asesoría en Todas las Etapas del Proceso Judicial Penal <br>
-                                        En LEGALES, nos comprometemos a cumplir los objetivos legales de nuestros clientes. Nuestro equipo de aabogados expertos en derecho penal tiene amplia experiencia y se encarga de manejar los trámites legales de manera eficiente y sin causar inconvenientes adicionales. Ofrecemos representación y asesoría legal personalizada, tomando decisiones adecuadas en cada etapa del caso.
+                                        En LEGALES, nos comprometemos a cumplir los objetivos legales de nuestros clientes. Nuestro equipo de Abogados expertos en derecho penal tiene amplia experiencia y se encarga de manejar los trámites legales de manera eficiente y sin causar inconvenientes adicionales. Ofrecemos representación y asesoría legal personalizada, tomando decisiones adecuadas en cada etapa del caso.
                                        </div>
                                     </div>
                                  </div>
@@ -453,15 +453,14 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-6 col-lg-5">
-                     <div class="widget pbmit-footer-widget-col-1">
+                      <div class="widget pbmit-footer-widget-col-1">
                         <h2>Consultenos su caso</h2>
                         <p></p>
-                        <div class="pbmit-footer-newsletter">
-                           <input type="email" name="EMAIL" placeholder="Envienos su numero telefonico" required="">
-                           <button type="submit" value="Sign up">
-                              <i class="pbmit-base-icon-right-arrow-1"></i>
-                           </button>
-                        </div>
+                        <div class="pbmit-hsanp-btn">
+                                    <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                                       <span>Atención personalizada</span>
+                                    </a>
+                                 </div>
                      </div>
                   </div>
                   <div class="col-md-6 col-lg-3">
