--- a/alcoholemialegales.html
+++ b/alcoholemialegales.html
@@ -94,7 +94,7 @@
                                           <li class="">
                                              <a href="faq.html">FAQ</a></li>
                                              
-                                          <li><a href="#">Abogado online</a></li>
+                                          <li><a href="contact-us.html">Abogado online</a></li>
                                        </ul>
                                     </div>
                                  </div>
@@ -104,7 +104,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
@@ -182,7 +182,7 @@
                            --><a
                               id="slider-1-slide-1-layer-8" 
                               class="rs-layer pbmit-rev-btn-effect rev-btn"
-                              href="" target="_self"
+                              href="#casos" target="_self"
                               data-type="button"
                               data-rsp_ch="on"
                               data-xy="xo:30px;y:m;yo:215px,173px,124px,96px;"
@@ -288,8 +288,8 @@
          <!-- page content -->
          <div class="page-content">
 
-            <section data-cursor="white-color" style="background-color: white;">
-               <div class="container">
+            <section data-cursor="white-color" style="background-color: white;" style="padding-top:25px;" id="casos">
+               <div class="container" style="padding-top:25px;">
                   <div class="row">
                      <div class="col-md-6">
                         <div class="about-right-section-home3">
@@ -361,7 +361,8 @@
                            <div class="pbmit-heading bg-color-dark animation-style2">
                               <h2 class="pbmit-title"> Necesitas ayuda?</h2>
                            </div>
-                           <form class="pbmit-form-style-1">
+                           <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: #f8f9fa;    font-size: 28px;"> Escribenos aqui, atención personalizada <i class="fa fa-whatsapp"></i></a>
+                           <!-- <form class="pbmit-form-style-1">
                               <div class="row mb-3 g-3">
                                  <div class="col-lg-6 col-sm-6">
                                     <input type="text" class="form-control" placeholder="Dinos tu nombre" name="Your name">
@@ -375,7 +376,7 @@
                                     </a>
                                  </div>
                               </div>
-                           </form> 
+                           </form>  -->
                         </div>
                      </div>
                   </div>
@@ -458,6 +459,7 @@
                         <div class="pbmit-contact-widget-lines">
                            <div class="pbmit-contact-widget-line widget-address"><a href="mailtohello@legales.com.co" style="color: #fff;"> hello@legales.com.co</a></div>
                            <div class="pbmit-contact-widget-line widget-phone"><a href="tel:302 623 1220" style="color: #fff;">302 623 1220</a> </div>
+                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Centro comercial y empresarial Obelisco P H Carrera 74 # 48-37 oficina 329.<br> Barrio Laureles Estadio, Medellín, Colombia</a> </div>
                         </div>
                      </div>
                   </div>
@@ -486,7 +488,7 @@
                                     <a href="servicios.html">Servicios</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="FAQ.html">FAQ</a>
+                                    <a href="faq.html">FAQ</a>
                                  </li>
                               </ul>
                            </div>
