--- a/blog-grid.html
+++ b/blog-grid.html
@@ -546,7 +546,7 @@
                                     <a href="#">Services</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="FAQ.html">FAQ</a>
+                                    <a href="faq.html">FAQ</a>
                                  </li>
                                  <li class="menu-item">
                                     <a href="#">Careers</a>
