--- a/derechoinmobiliario.html
+++ b/derechoinmobiliario.html
@@ -94,7 +94,7 @@
                                           <li class="">
                                              <a href="faq.html">FAQ</a></li>
                                              
-                                          <li><a href="#">Abogado online</a></li>
+                                          <li><a href="contact-us.html">Abogado online</a></li>
                                        </ul>
                                     </div>
                                  </div>
@@ -104,7 +104,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
@@ -320,11 +320,12 @@
                   <div class="about-section-home4">
                      <div class="row">
                         <div class="col-md-3"></div>
-                        <div class="col-md-3">
+                         <div class="col-md-3"></div>
+                        <!-- <div class="col-md-3">
                            <div class="author-sing">
                               <img src="images/sing-attrotly.png" class="img-fluid" alt="">
                            </div>
-                        </div>
+                        </div> -->
                         <div class="col-md-3">
                            <div class="author-name">
                               <h2>Juan D Bastidas.</h2>
@@ -384,12 +385,12 @@
                         <h2 class="widget-title">Enlaces</h2>
                         <div class="textwidget">
                            <ul>
-                              <li><a href="#">Penal</a></li>
-                              <li><a href="#">Civil</a></li>
-                              <li><a href="#">Inmobiliario</a></li>
-                              <li><a href="#">Nosotros</a></li>
-                              <li><a href="#">Historias</a></li>
-                              <li><a href="#">Contacto</a></li>
+                               <li><a href="derechopenal.html">Penal</a></li>
+                              <li><a href="derechocivil.html">Civil</a></li>
+                              <li><a href="derechoinmobiliario.html">Inmobiliario</a></li>
+                              <li><a href="nosotros.html">Nosotros</a></li>
+                              <li><a href="index.html">Historias</a></li>
+                              <li><a href="contact-us.html">Contacto</a></li>
                            </ul>
                         </div>
                      </div>
@@ -413,6 +414,7 @@
                         <div class="pbmit-contact-widget-lines">
                            <div class="pbmit-contact-widget-line widget-address"><a href="mailtohello@legales.com.co" style="color: #fff;"> hello@legales.com.co</a></div>
                            <div class="pbmit-contact-widget-line widget-phone"><a href="tel:302 623 1220" style="color: #fff;">302 623 1220</a> </div>
+                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Centro comercial y empresarial Obelisco P H Carrera 74 # 48-37 oficina 329.<br> Barrio Laureles Estadio, Medellín, Colombia</a> </div>
                         </div>
                      </div>
                   </div>
@@ -441,7 +443,7 @@
                                     <a href="servicios.html">Servicios</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="FAQ.html">FAQ</a>
+                                    <a href="faq.html">FAQ</a>
                                  </li>
                               </ul>
                            </div>
