--- a/derechopenal.html
+++ b/derechopenal.html
@@ -94,7 +94,7 @@
                                           <li class="">
                                              <a href="faq.html">FAQ</a></li>
                                              
-                                          <li><a href="#">Abogado online</a></li>
+                                          <li><a href="contact-us.html">Abogado online</a></li>
                                        </ul>
                                     </div>
                                  </div>
@@ -104,7 +104,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
@@ -159,24 +159,24 @@
                                  <div class="pbmit-service-ads">
                                     <h3 class="pbmit-ads-title">Requiere apoyo de un especialista  en DERECHO PENAL?</h3>
                                    Solicite una cita ahora
-                                    <h4 class="pbmit-ads-contact">+1 840 841 25 69</h4>
+                                    <h4 class="pbmit-ads-contact"><a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank"><span style="    color: #bfb26c;"> +57 302 623 1220</span></a></h4>
                                  </div>
                               </div>
                            </aside>
                            <aside class="widget pbmit-htmlbgcolor">
-                              <h2 class="widget-title">Cuales son los procesos habilitados por LEGALES?</h2>
+                              <h2 class="widget-title">Cual es el procesos de LEGALES para una asesoria?</h2>
                               <div class="textwidget custom-html-widget">
                                  <div class="download">
                                     <div class="item-download">
-                                       <a href="#" target="_blank" rel="noopener noreferrer">
-                                          <i class="pbminfotech-base-icons pbmit-base-icon-pdf"></i> Descargue sugerencias PDF 
-                                          <i class="pbminfotech-base-icons pbmit-righticon  pbmit-base-icon-download-solid"></i>
+                                       <a href="https://formulario.legales.com.co/" target="_blank" rel="noopener noreferrer">
+                                          <i class="pbminfotech-base-icons pbmit-base-icon-doc"></i> Llene este formulario
+                                          <i class="pbminfotech-base-icons pbmit-righticon  pbmit-base-icon-check-mark"></i>
                                        </a>
                                     </div>
                                     <div class="item-download">
-                                       <a href="#" target="_blank" rel="noopener noreferrer">
-                                          <i class="pbminfotech-base-icons pbmit-base-icon-pdf"></i> Download Word File 
-                                          <i class="pbminfotech-base-icons pbmit-righticon pbmit-base-icon-download-solid"></i>
+                                       <a href="https://formulario.legales.com.co/" target="_blank" rel="noopener noreferrer">
+                                          <i class="pbminfotech-base-icons pbmit-base-icon-doc"></i> Llene este formulario
+                                          <i class="pbminfotech-base-icons pbmit-righticon  pbmit-base-icon-check-mark"></i>
                                        </a>
                                     </div>
                                  </div>
@@ -279,7 +279,7 @@
                                     <img src="images/slide-new-03.jpg" alt="Professional Attorneys">
                                  </div>
                                  <div class="pbmit-split-slide-item-image">
-                                    <img src="images/slide-new-03.jpg" alt="Professional Attorneys">
+                                    <img src="images/slide-new-001.jpg" alt="Professional Attorneys">
                                  </div>
                               </div>
                            </div>
@@ -393,7 +393,7 @@
                                  <div class="pbmit-split-slide-box">
                                     <div class="pbmit-split-responsive-image">
                                        <div class="pbmit-split-slide-item-image">
-                                          <img src="images/slide-new-03.jpg" alt="Professional Attorneys">
+                                          <img src="images/slide-new-001.jpg" alt="Professional Attorneys">
                                        </div> 
                                        <div class="pbmit-icon-box-wrapper d-flex align-items-center">
                                           <div class="pbmit-ihbox-icon">
@@ -497,6 +497,7 @@
                         <div class="pbmit-contact-widget-lines">
                            <div class="pbmit-contact-widget-line widget-address"><a href="mailtohello@legales.com.co" style="color: #fff;"> hello@legales.com.co</a></div>
                            <div class="pbmit-contact-widget-line widget-phone"><a href="tel:302 623 1220" style="color: #fff;">302 623 1220</a> </div>
+                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Centro comercial y empresarial Obelisco P H Carrera 74 # 48-37 oficina 329.<br> Barrio Laureles Estadio, Medellín, Colombia</a> </div>
                         </div>
                      </div>
                   </div>
@@ -525,7 +526,7 @@
                                     <a href="servicios.html">Servicios</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="FAQ.html">FAQ</a>
+                                    <a href="faq.html">FAQ</a>
                                  </li>
                               </ul>
                            </div>
