--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                                           
                                           <li class="">
-                                             <a href="FAQ.html">FAQ</a></li>
+                                             <a href="faq.html">FAQ</a></li>
                                              
                                           <li><a href="contact-us.html">Abogado online</a></li>
                                        </ul>
@@ -127,7 +127,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
@@ -1177,7 +1177,7 @@
          <div class="pbmit-footer-widget-area">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6 col-lg-5">
+                  <div class="col-md-6 col-lg-3">
                       <div class="widget pbmit-footer-widget-col-1">
                         <h2>Consultenos su caso</h2>
                         <p></p>
@@ -1216,13 +1216,13 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-2">
+                  <div class="col-md-6 col-lg-4">
                      <div class="widget">
                         <h3 class="widget-title">Contáctos aquí</h3>
                         <div class="pbmit-contact-widget-lines">
                            <div class="pbmit-contact-widget-line widget-address"><a href="mailtohello@legales.com.co" style="color: #fff;"> hello@legales.com.co</a></div>
                            <div class="pbmit-contact-widget-line widget-phone"><a href="tel:302 623 1220" style="color: #fff;">302 623 1220</a> </div>
-                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Medellín - Colombia</a> </div>
+                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Centro comercial y empresarial Obelisco P H Carrera 74 # 48-37 oficina 329.<br> Barrio Laureles Estadio, Medellín, Colombia</a> </div>
                         </div>
                      </div>
                   </div>
@@ -1251,7 +1251,7 @@
                                     <a href="servicios.html">Servicios</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="FAQ.html">FAQ</a>
+                                    <a href="faq.html">FAQ</a>
                                  </li>
                               </ul>
                            </div>
