--- a/inicial.html
+++ b/inicial.html
@@ -104,7 +104,7 @@
                                           <li class="">
                                              <a href="faq.html">Faq</a></li>
                                              
-                                          <li><a href="#">Abogado online</a></li>
+                                          <li><a href="contact-us.html">Abogado online</a></li>
                                        </ul>
                                     </div>
                                  </div>
@@ -113,7 +113,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
