--- a/servicios.html
+++ b/servicios.html
@@ -97,9 +97,9 @@
 
                                           
                                           <li class="">
-                                             <a href="FAQ.html">FAQ</a></li>
+                                             <a href="faq.html">FAQ</a></li>
                                              
-                                          <li><a href="#">Abogado online</a></li>
+                                          <li><a href="contact-us.html">Abogado online</a></li>
                                        </ul>
                                     </div>
                                  </div>
@@ -109,7 +109,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
@@ -298,10 +298,10 @@
                         <h2>Consultenos su caso</h2>
                         <p></p>
                         <div class="pbmit-hsanp-btn">
-                                    <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
-                                       <span>Atención personalizada</span>
-                                    </a>
-                                 </div>
+                           <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                              <span>Atención personalizada</span>
+                           </a>
+                        </div>
                      </div>
                   </div>
                   <div class="col-md-6 col-lg-3">
@@ -338,7 +338,8 @@
                         <div class="pbmit-contact-widget-lines">
                            <div class="pbmit-contact-widget-line widget-address"><a href="mailtohello@legales.com.co" style="color: #fff;"> hello@legales.com.co</a></div>
                            <div class="pbmit-contact-widget-line widget-phone"><a href="tel:302 623 1220" style="color: #fff;">302 623 1220</a> </div>
-                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Medellín - Colombia</a> </div>
+                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Centro comercial y empresarial Obelisco P H Carrera 74 # 48-37 oficina 329.
+                           Barrio Laureles Estadio, Medellín, Colombia</a> </div>
                         </div>
                      </div>
                   </div>
@@ -367,7 +368,7 @@
                                     <a href="servicios.html">Servicios</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="FAQ.html">FAQ</a>
+                                    <a href="faq.html">FAQ</a>
                                  </li>
                               </ul>
                            </div>
